--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -1,6 +1,6 @@
 <div class="page page-dashboard">
 	<div class="pageheader backpage">		
-		<a href back-button></a>
+		<a href > &nbsp </a>
 		<div class="facility-view elika-facility-name"></div>
 	</div>
 	<div class="pagecontent">
