getCredentials onclick credential tab

--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -332,7 +332,7 @@
 										</md-content>
 									</md-tab>
 
-									<md-tab label="Credentials">
+									<md-tab label="Credentials" ng-click="getCredentials()">
 										<md-content>
 											<div class="credintials clckevent mt-20" ng-controller="AccordionDemoCtrl">
 												<uib-accordion close-others="oneAtATime">
