--- a/views/tmpl/admin/door/edit-door-groups.html
+++ b/views/tmpl/admin/door/edit-door-groups.html
@@ -31,7 +31,7 @@
 	
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
-				<section class="tile tile-simple">
+				<!-- <section class="tile tile-simple">
 					<div class="leftdetail tile-widget p-30 text-center">
 						<h4 class="mb-0"><strong>Pool Gate</strong></h4>
 						<div class="mt-40">
@@ -44,6 +44,23 @@
 							<li class="tcol p-10">
 								<h3 class="m-0 mb-5">Facility</h3>
 								<span class="text-transparent-white mt-15"><a ui-sref="app.admin.facility.facility-details">USA Corporate Services</a></span>
+							</li>
+						</ul>
+					</div>					
+				</section> -->
+				<section class="tile tile-simple">
+					<div class="leftdetail tile-widget p-30 text-center">
+						<h4 class="mb-0"><strong>{{doorGrpData.doorgroup_name}} </strong></h4>
+						<div class="mt-40">
+							<a ui-sref="app.admin.door.view-door-groups({doorgroup_id:doorgroup_id})" class="btn btn-rounded-20 btn-sm bg-slategray dk">View Door</a>
+							<a ng-click="showConfirm($event,doorgroup_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete Door group</a>
+						</div>
+					</div>
+					<div class="tile-body text-center bg-blue p-0"> 
+						<ul class="list-inline tbox m-0">
+							<li class="tcol p-10">
+								<h3 class="m-0 mb-5">Facility</h3>
+								<span class="text-transparent-white mt-15"><a ui-sref="app.admin.facility.facility-details"> {{doorGrpData.facility_name}}</a></span>
 							</li>
 						</ul>
 					</div>					
