change route schedule group to schedules

--- a/views/header.html
+++ b/views/header.html
@@ -59,7 +59,7 @@
 			<li class="dropdown" uib-dropdown>
 				<span class="dropdown-toggle" uib-dropdown-toggle>Schedules &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<li><a ui-sref="app.admin.schedule.schedule-groups">Schedules</a></li>
+					<li><a ui-sref="app.admin.schedule.schedules">Schedules</a></li>
 					<li><a ui-sref="app.admin.schedule.add-schedule">Add Schedule</a></li>
 					<li><a ui-sref="app.admin.schedule.holiday-schedules">Holiday Schedules</a></li>
 				</ul>
