--- a/views/tmpl/admin/profile-settings.html
+++ b/views/tmpl/admin/profile-settings.html
@@ -83,7 +83,7 @@
 											<div class="form-group row legend">
 												<div class="col-md-12">
 													<p></p>
-													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Cancel</button>
+													<button type="reset" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Cancel</button>
 													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Save</button>
 												</div>
 											</div>
