--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -365,6 +365,10 @@
 																		 multiple required>
 																		</select>
 																	</div>
+																	<div class="form-group col-sm-6 col-md-2" ng-hide="userGroup.length">
+																		<label for="">Add Schedule</label><br/>
+																		<a ng-click="scheduleopen()" class="group-span-filestyle btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a">Add</a>
+																	</div>
 																</div>
 																<div class="row">
 																	<div class="form-group col-sm-12 col-md-12">
