--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -27,7 +27,7 @@
 			<div class="col-md-12"> 
 				<section class="tile tile-simple"> 
 					<div class="tile-header dvd dvd-btm">
-						<h1 class="custom-font"><strong>Edit Office Weekdays SCHEDULE</strong></h1>
+						<h1 class="custom-font"><strong>Edit SCHEDULE</strong></h1>
 					</div>
 					<div class="tile-body p-0"> 
 						<div class="row">
