--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -191,6 +191,17 @@
 																		</span>
 																	</div>
 																</div>
+
+																<div class="form-group col-sm-6 col-md-3">
+																	<label for="">SIP Username <span class="text-danger">*</span></label>
+																	<input type="text" name="sip_username" id="sip_username" ng-model="userData.sip_username" class="form-control" required>
+																</div>
+																<div class="form-group col-sm-6 col-md-3">
+																	<label for="">SIP Password <span class="text-danger">*</span></label>
+																	<input type="password" name="sip_password" id="" ng-model="userData.sip_password" class="form-control" required>
+																</div>
+
+
 															</div>
 														</div>
 													</div>
