--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -119,7 +119,7 @@
 									           </div>
 									           <div class="list-view grid-hide">
 												<p><b>Zip Code : </b>{{ user.user_zipcode }}</p>
-												<p><b>Phone No. : </b>{{ user.user_phone_no }}</p>
+												<p><b>Phone No. : </b>{{ user.user_phone_no | tel }}</p>
 									           </div>
 
 									           <div class="list-view grid-hide">
