--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -122,7 +122,7 @@
 										<md-card ng-repeat="door in adoors track by door.door_id">
 											<md-card-content>
 												<h2 class="md-title mt-40">{{ door.door_name }}</h2>
-												<p class="mb-20">{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
+												<p class="mb-20">{{ (door.door_status == 1) ? 'Active' : 'Inactive' }}</p>
 												<!-- <p><a ui-sref="app.admin.device.device-details">{{ door.device }}</a></p> -->
 												<!-- <p style="height:auto;">{{ door.description | limitTo: 75 }}{{door.description.length > 75 ? '...' : ''}}</p> -->
 											</md-card-content>
