worked on elika-warehouse inventory devices for list and grid view

--- a/elika-warehouse/styles/custom.css
+++ b/elika-warehouse/styles/custom.css
@@ -976,7 +976,7 @@ a.serplan:hover {
 .listview .glview md-card md-card-content {
     float: none;
     display: inline-block;
-    width: auto!important;
+    width: 100%!important;
     vertical-align: top;
     text-align: left
 }
