--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -143,7 +143,7 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-10 pb-20">
 
-								<div class="col-sm-2 col-md-3 filterorder">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<!--label class="control-label" ng-init="filtershow=true">
 
 										<a href="javascript:void()"><input type="checkbox"  class="hideshowfilter"/>Search by</a>
@@ -161,7 +161,7 @@
 
 								</div>
 								
-								<div class="col-sm-8 col-md-6">
+								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-7 col-md-9 search">
 											<input type="text" class="form-control" ng-model="searchText" maxlength="50" placeholder="Search by text...." ng-keyup="deviceInit($event)">
@@ -188,6 +188,14 @@
 												<!-- <span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span> -->
 											</div>
 										</div>
+									</div>
+								</div>
+								
+								<div class="col-sm-3 col-md-3">
+									<div class="gridlistbar ta-r pull-right" style="display: block;">
+										<label class="control-label">View by</label>
+										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
+										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
 									</div>
 								</div>
 
