--- a/styles/custom.css
+++ b/styles/custom.css
@@ -3041,6 +3041,15 @@ span.edittxt {
     box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.15)!important;
 }
 
+.error.layout {
+	text-align: center;
+    display: block;
+    margin: 75px 0 50px;
+    color: #e60000;
+    font-size: 18px;
+    font-weight: 500;
+}
+
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .profilephoto #profilep-1,
     .profilephoto #profilep-2 {
