--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -114,7 +114,7 @@
 				<span><username></username> <fa name="angle-down"></fa></span>
 			</a>
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
-				<li><a ui-sref="app.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
+				<!-- <li><a ui-sref="app.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li> -->
 				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
 			</ul>
 		</li>
